# NovaNN

./: .env  .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  FileTree.md  FileTree_NeuralNetwork.md  FramewrokFiletree.md  LICENCE  NovaNNFiletree.md  README.en.md  README.es.md  README.md  README_nova.md  conv_example.py  example.py  main.py  pyproject.toml  pytorch_training_history.json  requirements.txt  training_history.json  visualization.py
examples/: binary_classification.py  conv_example.py  multiclass_classification.py  regresion.py
notebooks/: exploration.ipynb
novann/: __init__.py  functional.py  utils.py
novann/_typing/: __init__.py  _typing.py
novann/core/: __init__.py  config.py  constants.py  dataloader.py  decorators.py  init.py  logger.py
novann/layers/: __init__.py
novann/losses/: __init__.py  functional.py  loss_functions.py
novann/metrics/: __init__.py  metrics.py
novann/model/: __init__.py  nn.py
novann/module/: __init__.py  layer.py  module.py
novann/optim/: __init__.py  adam.py  adamw.py  rmsprop.py  sgd.py
novann/utils/: __init__.py
src/: __init__.py  utils.py
src/_typing/: __init__.py  _typing.py
src/core/: __init__.py  config.py  dataloader.py  init.py  logger.py
src/layers/: __init__.py
src/losses/: Functional.py  __init__.py  functional.py
src/metrics/: __init__.py  metrics.py
src/model/: __init__.py  nn.py
src/module/: __init__.py  layer.py  module.py
src/optim/: __init__.py  adam.py  sgd.py  (+1 more)
tests/: README.en.md  README.md  test_dropout_regularization.py  test_linear_layer.py  test_sequential_module.py
(+93 files in other folders)
