[project]
name = "nova-nn"
version = "1.1.0"
description = "NovaNN deep learning framework"
authors = [{ name = "JOSE-MDG", email = "josepemlengineer@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "black (>=25.11.0,<26.0.0)",
]
